mod/quiz/styles.css
/* ... */
#page-mod-quiz-edit ul.slots li.section li.activity .edit_icon,
#page-mod-quiz-edit ul.slots li.section li.activity a.preview,
#page-mod-quiz-edit ul.slots li.section li.activity .editing_delete,
#page-mod-quiz-edit ul.slots li.section li.activity .editing_maxmark {
    margin: 0 2px;
}

#page-mod-quiz-edit ul.slots li.section.only-has-one-slot li.activity .editing_move,
#page-mod-quiz-edit ul.slots li.section.only-has-one-slot li.activity .editing_delete {
    visibility: hidden;
}

#page-mod-quiz-edit ul.slots.only-one-section li.section.only-has-one-slot li.activity .editing_delete {
    visibility: visible;
}

#page-mod-quiz-edit ul.slots li.section li.activity .question_dependency_wrapper {
    position: absolute;
    top: 0;
    right: 0;
}

#page-mod-quiz-edit ul.slots li.section li.activity .question_dependency_wrapper.question_dependency_cannot_depend {
    display: none;
}

#page-mod-quiz-edit ul.slots li.section li.activity .question_dependency_wrapper .currentlink,
#page-mod-quiz-edit ul.slots li.section li.activity .question_dependency_wrapper .cm-edit-action {
    position: relative;
    left: 20px;
    top: -1em;
}

#page-mod-quiz-edit ul.slots li.section li.activity .activityinstance {
    display: flex;
    flex: 1 1 auto;
    min-height: 1.7em;
    padding-right: 2px;
}

#page-mod-quiz-edit ul.slots li.section li.activity .mod-indent-outer {
    display: flex;
    padding-left: 22px;
}

#page-mod-quiz-edit ul.slots .activityinstance form {
    display: inline;
}

#page-mod-quiz-edit span.editinstructions {
    right: 0;
}

#page-mod-quiz-edit ul.slots .activityinstance span.instancename {
    overflow-x: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    display: inline-block;
    height: 20px;
}

#page-mod-quiz-edit ul.slots .activityinstance span.instancename img {
    margin: 0 0.2em;
}

#page-mod-quiz-edit #categoryquestions .questionname,
#page-mod-quiz-edit ul.slots li.activity div.activityinstance .questionname {
    font-weight: bold;
    color: #555;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

#page-mod-quiz-edit ul.slots li.activity div.activityinstance .questiontext {
    color: #555;
}

#page-mod-quiz-edit .section .activity .editing_move {
    position: absolute;
    left: 0;
    top: 0;
}

#page-mod-quiz-edit ul.slots li.activity div.activityinstance .mod_quiz_random_qbank_link {
    font-size: 0.8em;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    margin-left: 0.25rem;
}

#page-mod-quiz-edit ul.slots .activityinstance img.activityicon {
    float: inherit;
    margin: .2em 0 0;
    padding: 0;
}

#page-mod-quiz-edit .section .activity .actions {
    position: inherit;
    white-space: nowrap;
    background: #e6e6e6;
    padding: 0.1em 0;
}

#page-mod-quiz-edit .mod_quiz_edit_forms {
    display: none;
}

#categoryquestions .header {
    text-align: center;
    padding: 0 2px;
    border: 0 none;
    vertical-align: top;
}

#categoryquestions .header.checkbox {
    vertical-align: bottom;
}

#categoryquestions .header.qtype {
    white-space: nowrap;
}

#categoryquestions th .sorters {
    font-weight: normal;
    font-size: 0.8em;
}

#categoryquestions td.modifiername,
#categoryquestions td.creatorname {
    line-height: 1em;
}

#categoryquestions td.modifiername span.date,
#categoryquestions td.creatorname span.date {
    font-weight: normal;
    font-size: 0.8em;
}

table#categoryquestions {
    width: 100%;
    table-layout: fixed;
}

#categoryquestions .iconcol {
    width: 15px;
    text-align: center;
    padding: 0;
}

#categoryquestions .checkbox {
    width: 19px;
    text-align: center;
    padding: 0;
}

#categoryquestions .editmenu {
    width: 5em;
}

#categoryquestions .qtype {
    text-align: center;
}

#categoryquestions .qtype {
    width: 28px;
    padding: 0;
}

#categoryquestions .questiontext {
    position: relative;
    zoom: 1;
    padding-left: 0.3em;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

#categoryquestions .questionname {
    white-space: nowrap;
    overflow: hidden;
    zoom: 1;
    position: relative;
}

#categoryquestions .questiontext p {
    margin: 0;
}

#page-mod-quiz-edit table#categoryquestions td,
#page-mod-quiz-edit table#categoryquestions th {
    overflow: hidden;
    white-space: nowrap;
}

.mod_quiz_qbank_dialogue {
    width: 80%;
    min-height: 200px;
}

.mod_quiz_qbank_dialogue.moodle-dialogue-fullscreen {
    width: 100%;
}

.mod_quiz_qbank_dialogue .questionbankloading {
    position: absolute;
    top: 30px;
    bottom: 0;
    left: 0;
    right: 0;
    background: #fff;
    text-align: center;
    opacity: 0.5;
    padding-top: 50px;
}

.mod_quiz_qbank_dialogue #advancedsearch label {
    font-size: 100%;
}

.quizquestionlistcontrols {
    text-align: center;
}

.categoryinfo {
    padding: 0.3em;
}

.path-mod-quiz .gradingdetails {
    font-size: small;
}

#page-mod-quiz-edit div#repaginatedialog .mform {
    margin-left: auto;
    margin-right: auto;
}

#page-mod-quiz-edit div.container div.generalbox {
    position: relative;
    display: block;
    border: 0 none;
    margin: 0;
    padding: 0;
}

#page-mod-quiz-edit .paging {
    margin-top: 0;
    margin-bottom: 0;
    padding: 0.1em 0.3em;
    display: block;
    background-color: #ddd;
}

#page-mod-quiz-edit #page-footer {
    clear: both;
    padding-top: 1em;
}

#page-mod-quiz-edit .categoryinfofield {
    font-style: italic;
}

#page-mod-quiz-edit .categorynamefield {
    font-weight: bold;
}

#page-mod-quiz-edit .questionsortoptions {
    background-color: #ddd;
}

#page-mod-quiz-edit div.questionbank .categorysortopotionscontainer {
    padding-top: 0.5em;
    margin-top: 0.3em;
}
/* ... */

